--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -78,11 +78,11 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ")
           })
         }
       </footer>
-    </div>
+    <!-- </div>
     <figure>
       <img src={image} alt={name} />
     </figure>
-  </div>
+  </div> -->
 </Section>
 
 <style>
