--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const { name, label } = basics
     <About />
     <Experience />
     <Education />
-    <Projects />
+    <!-- <Projects /> -->
     <Skills />
   </main>
 
