--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import { basics } from "@cv"
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 
 interface Props {
   title: string
@@ -35,6 +36,7 @@ const { image, summary, url } = basics
   </head>
   <body>
     <slot />
+    <SpeedInsights />
   </body>
 </html>
 
